--- a/css/estilo.css
+++ b/css/estilo.css
@@ -26,7 +26,7 @@
 
 .menu li a:hover { color: #042470; font-weight: bolder; }
 
-#check { display: none; }
+.check { display: none; }
 
 #check:checked ~ .menu { height: 200px }
 
@@ -44,7 +44,7 @@
 
 #principal a:hover { transform: scale(1.1); }
 
-#footer { background-color: white; color: #151515; display: flex; justify-content: space-between; width: 100%; height: 100px; }
+#footer { background-color: white; color: #151515; display: flex; justify-content: space-between; width: 100%; height: 80px;}
 
 .footerR { display: flex; align-content: center; justify-content: flex-start; width: 60%; margin-right: 5%; }
 
@@ -77,6 +77,8 @@
 #inspiracion img:hover { transform: scale(1.2); }
 
 #productos { margin-bottom: 10px; }
+
+.scroll{overflow: hidden; height: 630px;}
 
 #productos .imgCenter { justify-content: center; }
 
@@ -128,7 +130,7 @@
 
 #formulario .form hr { padding-bottom: 8px; }
 
-#nuevoHtml{ background-color:white;border-left-style: solid; border-top: solid ; border-bottom: solid ;border-color: black; position: absolute; top: 60px; right: 0px; width:440px; height:1080px; overflow: scroll;}
+#nuevoHtml{ background-color:white;border-left-style: solid; border-top: solid ; border-bottom: solid ;border-color: black; position: absolute; top: 60px; right: 0px; width:440px; height:660px; overflow: scroll;}
 
 #nuevoHtml .h2 {font-family: "Montserrat", sans-serif; font-size: 10rem;}
 
@@ -158,6 +160,10 @@
 
 #seguirComprando { all: unset; color: white; font-size:10px;}
 
+
+.buttonCard { color:#F9F5EB; background-color: #253b5b; width: 120px; height: 30px; font-size: 12px; border: none; border-radius: 4px;}
+
+.buttonCard:hover { transform: scale(1.05); }
 
 @media screen and (min-width: 768px) { #principal h2 { padding-top: 4%; }
   #principal p { margin-top: 4%; }
